--- a/GitHub_Demo.Rmd
+++ b/GitHub_Demo.Rmd
@@ -199,4 +199,4 @@ Now let's *push* some changes from RStudio to GitHub:
 
 That's it for now! This is just a glimpse into the possibilities of Git/GitHub and R. There's an open source book all about this here: https://happygitwithr.com/index.html
 
-#Just testing from GitHub HI
+#Just testing from GitHub HIhi
